# payments-rest-api

./: .env.example  .gitignore  Dockerfile  README.md  cloudformation.yaml  deploy.sh  example-client.py  lambda_function.py  main.py  nodeless.py  openapi.json  requirements.txt
.github/workflows/: lamda_upload.yml
docs/: FLY.md  RENDER.md
fly/: .env.example  DEV.md  Dockerfile  README.md  config.py  example_client.py  fly.toml  main.py  nodeless.py  pyproject.toml  requirements.txt
fly/shopify/: __init__.py  client.py  config.py  models.py  router.py  service.py
infrastructure/: INFRASTRUCTURE.md  github-actions-policy.json
lambda/: cloudformation.yaml  lambda_function.py
lambda/dev/: DEV.md
lambda/docs/: aws_credentials.md
